--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "stay-awake": "0.0.3"
   },
   "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-portsoc": "^0.8.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
