--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "stay-awake": "0.0.3"
+  },
+  "eslintConfig": {
+    "extends": "portsoc",
+    "root": true,
+    "env": {
+      "browser": true
+    }
   }
 }
